syntax = "proto3";
package network;
option go_package="./;pkg";
message conn_address{
  string ip   = 1;
  uint32 port = 2;
}

message DeviceMessage {
  enum Level{
    JUMP_SERVER = 0;
    LEVEL_1     = 1;
    LEVEL_2     = 2;
  }

  enum Type{
    ANDROID = 0;
    IOS     = 1;
    PC      = 2;
    USB     = 3;
    PCIE    = 4;
  }

  string deviceName = 1;
  uint64 deviceId   = 2;
  string deviceAddress = 3;
  Level   _level = 4;
  DeviceMessage  deviceParent = 5;
  Type    _type = 6;
}

message Request{
  enum type{
    shell = 0;   //向shell传输可执行命令
    file    = 1; //向shell传输文件
    message = 2; //消息体
    register = 3; //注册消息
  }

  conn_address from = 1;
  conn_address to   = 2;
  type  _type = 3;
  uint64 timestamp = 4;
  oneof pyload {
    ShellRequest shellRequest = 5;
    FileRequest fileRequest = 6;
    MessageRequest messageRequest = 7;
    RegisterRequest registerRequest = 8;
  }
}

message ShellRequest{
  int32 shellId     = 1;
  string command    = 2;
}

message FileRequest{
  enum type{
    upload = 0;
    download = 1;
  }
  int32 shellId     = 1;
  string filename   = 2;
  type _type  = 3;
}

message MessageRequest{
  string data = 1;
}

message RegisterRequest{
  repeated DeviceMessage devices = 1;
}


message Response{
  enum state{
    success = 0;
    error   = 1;
  }
  state stateCode = 1;
  conn_address from = 2;
  conn_address to   = 3;
  string  msg = 4;
  uint64 timestamp = 5;
}
