syntax = "proto3";
option go_package="./;register";
package protos;

message DeviceMessage {
  enum Level{
    JUMP_SERVER = 0;
    LEVEL_1     = 1;
    LEVEL_2     = 2;
  }

  enum Type{
    ANDROID = 0;
    IOS     = 1;
    PC      = 2;
    USB     = 3;
    PCIE    = 4;
  }

  string deviceName = 1;
  string deviceAddress = 2;
  Level   _level =3;
  DeviceMessage  deviceParent = 4;
  Type    _type = 5;
  uint64  allocedId  = 6;
  int32   terminalPort = 7;
}

service Reisgter{
  rpc RegisterDevice(RegisterRequest) returns (RegisterResponse){}
  rpc GetAllRegisteredDevice(RegisterRequest) returns (RegisterResponse){}
  rpc AllocDevice(RegisterRequest)returns (RegisterResponse){}
  rpc FreeDevice(RegisterRequest)returns (RegisterResponse){}
}

message RegisterRequest{
  repeated DeviceMessage devices = 1;
}

message RegisterResponse{
  enum state{
    success = 0;
    error   = 1;
  }
  state stateCode = 1;
  string  msg = 2;
  repeated DeviceMessage devices = 3;
}